display version info in page footer

--- a/src/main/webapp/less/main.less
+++ b/src/main/webapp/less/main.less
@@ -33,3 +33,9 @@ table.users {
     border-right: 1px solid #000;
   }
 }
+
+.versioninfo {
+  margin-top: 3em;
+  font-size: smaller;
+  font-style: italic;
+}
