added access log view

--- a/src/main/webapp/less/main.less
+++ b/src/main/webapp/less/main.less
@@ -3,7 +3,7 @@ div#flash-message {
   margin-bottom: 2em;
 }
 
-table.users {
+.users {
   background: lightcyan;
   margin-bottom: 2em;
   border: 1px solid black;
@@ -32,6 +32,19 @@ table.users {
     border-left: 1px solid #000;
     border-right: 1px solid #000;
   }
+}
+
+.accesslog {
+  .users;
+
+  tr.odd {
+    background: white;
+  }
+}
+
+.pagination {
+  margin-bottom: 2em;
+  margin-top: 2em;
 }
 
 .versioninfo {
